[gd_scene format=3 uid="uid://ddatr3mm5xylh"]

[ext_resource type="Script" uid="uid://yyvds8oadqhs" path="res://scripts/weapons/laser_bolt.gd" id="1_bolt"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bolt"]
height = 4.0
radius = 0.3

[sub_resource type="StandardMaterial3D" id="Mat_bolt"]
transparency = 1
blend_mode = 1
no_depth_test = true
shading_mode = 0
albedo_color = Color(0.3, 0.7, 1, 0.7)

[sub_resource type="CylinderMesh" id="CylinderMesh_bolt"]
top_radius = 0.12
bottom_radius = 0.12
height = 4.0
radial_segments = 6

[sub_resource type="StandardMaterial3D" id="Mat_core"]
shading_mode = 0
albedo_color = Color(0.85, 0.95, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_core"]
top_radius = 0.06
bottom_radius = 0.06
height = 4.0
radial_segments = 6

[node name="LaserBolt" type="Area3D" unique_id=201786592]
script = ExtResource("1_bolt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=99874719]
transform = Transform3D(1, 0, 0, 0, -3.6199901e-06, -1, 0, 1, -3.6199901e-06, 0, 0, 0)
shape = SubResource("CylinderShape3D_bolt")

[node name="BoltMesh" type="MeshInstance3D" parent="." unique_id=1498713724]
transform = Transform3D(1, 0, 0, 0, -3.6199901e-06, -1, 0, 1, -3.6199901e-06, 0, 0, 0)
material_override = SubResource("Mat_bolt")
mesh = SubResource("CylinderMesh_bolt")

[node name="CoreMesh" type="MeshInstance3D" parent="." unique_id=602066290]
transform = Transform3D(1, 0, 0, 0, -3.6199901e-06, -1, 0, 1, -3.6199901e-06, 0, 0, 0)
material_override = SubResource("Mat_core")
mesh = SubResource("CylinderMesh_core")
